Updated the manual to the client version 3.0.4.

--- a/sample/Using the il2_rest client.ipynb
+++ b/sample/Using the il2_rest client.ipynb
@@ -20,9 +20,11 @@
     "\n",
     "import sys\n",
     "import traceback\n",
-    "sys.path.append('../')\n",
+    "import json\n",
+    "#sys.path.append('../')\n",
     "\n",
     "from il2_rest import RestNode\n",
+    "from il2_rest.util import PKCS12Certificate\n",
     "\n",
     "# Comment these two lines if you want to show InsecureRequestWarnings\n",
     "import urllib3\n",
@@ -48,7 +50,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
+    "address = 'minerva-data.il2.io'\n",
+    "port = 32094\n",
+    "cert_file = 'danielchino.api.pfx'\n",
+    "with open('password.details','r') as f :\n",
+    "    cert_pass = f.readline()\n",
+    "\n",
+    "node = RestNode(cert_file = cert_file, cert_pass = cert_pass, port = port, address=address)\n",
     "print(node.details)"
    ]
   },
@@ -69,7 +77,8 @@
    "source": [
     "chains = node.chains\n",
     "for chain in chains :\n",
-    "    print(chain)"
+    "    print(chain)\n",
+    "chain_id = chains[0].id"
    ]
   },
   {
@@ -93,7 +102,6 @@
    },
    "outputs": [],
    "source": [
-    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "print(chain.active_apps)\n",
@@ -101,29 +109,8 @@
     "for key in chain.permitted_keys :\n",
     "    print(key)\n",
     "\n",
-    "for record in chain.records_from(firstSerial=0, lastSerial=2) :\n",
+    "for record in chain.records(firstSerial=0, lastSerial=2).items :\n",
     "    print(record)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This chain has the app 4 active, so it is also possible to check and store documents directly.\n",
-    "Bellow we will be checking the list of the documents and getting the content of the documents using the `fileId`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for document in chain.documents :\n",
-    "    print(document)\n",
-    "\n",
-    "document_bytes = chain.document_as_raw(fileId='GF-NsyJx_iX1Yab8k4suJkMG7DBO2lGAB9F2SCY4GWk#SHA256')\n",
-    "print(document_bytes)"
    ]
   },
   {
@@ -142,8 +129,6 @@
    "outputs": [],
    "source": [
     "from il2_rest.models import ChainCreationModel\n",
-    "\n",
-    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
     "\n",
     "new_chain = ChainCreationModel(\n",
     "    name = 'IL2App Chain',\n",
@@ -176,8 +161,6 @@
     "from il2_rest.models import KeyPermitModel\n",
     "from il2_rest.enumerations import KeyPurpose\n",
     "\n",
-    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
-    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
@@ -204,56 +187,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
-    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
     "    apps = chain.permit_apps([4])\n",
     "    print(apps)\n",
-    "except :\n",
-    "    print(traceback.format_exc())\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Storing Records\n",
-    "\n",
-    "It is possible to store records using the model classes or using the unpacked method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from il2_rest.models import NewRecordModelAsJson\n",
-    "from il2_rest.models import NewRecordModel\n",
-    "\n",
-    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
-    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
-    "chain = node.chain_by_id(chain_id)\n",
-    "\n",
-    "try :\n",
-    "    model_json = NewRecordModelAsJson(applicationId = 1, payloadTagId = 300, rec_json= {'tagId': 300,'version' : 1, 'apps': [4]})\n",
-    "    record_json = chain.add_record_as_json(model = model_json)\n",
-    "    print(record_json)\n",
-    "except :\n",
-    "    print(traceback.format_exc())\n",
-    "\n",
-    "try :\n",
-    "    model_bytes = NewRecordModel(applicationId = 1, payloadTagId = 300, payloadBytes = bytes([248, 52, 7, 5, 0, 0, 20, 2, 1, 4]))\n",
-    "    record_bytes = chain.add_record(model_bytes)\n",
-    "    print(record_bytes)\n",
-    "except :\n",
-    "    print(traceback.format_exc())\n",
-    "\n",
-    "try :\n",
-    "    record_unpacked = chain.add_record_unpacked(applicationId = 1, payloadTagId = 300, rec_bytes = bytes([5, 0, 0, 20, 2, 1, 4]))\n",
-    "    print(record_unpacked)\n",
     "except :\n",
     "    print(traceback.format_exc())\n"
    ]
@@ -272,22 +210,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "from il2_rest.models import DocumentsBeginTransactionModel\n",
     "from il2_rest.models import DocumentsTransactionModel\n",
     "\n",
-    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
-    "\n",
     "print(str(node.documents_config))\n",
     "\n",
-    "chain_id = '2hwzyZ6q08LDKxiN440ZKTxDLfSntAJcLjFuAKVGDN4'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "# Using a DocumentsBeginTransactionModel\n",
     "try :\n",
-    "    model = DocumentsBeginTransactionModel(chain = '2hwzyZ6q08LDKxiN440ZKTxDLfSntAJcLjFuAKVGDN4', \n",
+    "    model = DocumentsBeginTransactionModel(chain = chain_id, \n",
     "                                           comment ='Using model',\n",
     "                                           encryption = 'PBKDF2-SHA256-AES128-HIGH',\n",
     "                                           password = 'qwerty123456')\n",
@@ -316,7 +253,7 @@
     "       \n",
     "    print(chain.documents_transaction_status(transaction_id))\n",
     "    \n",
-    "    #locator = chain.documents_transaction_commit(transaction_id)\n",
+    "    locator = chain.documents_transaction_commit(transaction_id)\n",
     "    print(locator)\n",
     "except :\n",
     "    print(traceback.format_exc())\n"
@@ -338,31 +275,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
-    "\n",
-    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
-    "locator = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRIe'\n",
     "resp = chain.documents_transaction_metadata(locator)\n",
-    "print(resp)\n",
-    "\n",
-    "# Download a single file\n",
-    "chain.download_single_document_at(locator, 2)\n",
-    "\n",
-    "# Download a compressed file with all files in the record\n",
-    "chain.download_documents_as_zip(locator)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ~~Storing documents~~\n",
-    "\n",
-    "~~There are three ways to store a document: plain text, bytes or file. To store a text document you can use the following script:~~\n",
-    "\n",
-    "> DEPRECATED\n"
+    "print(resp)"
    ]
   },
   {
@@ -371,38 +287,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from il2_rest.models import DocumentUploadModel\n",
+    "# Download a single file\n",
+    "chain.download_single_document_at(locator, 1)\n",
     "\n",
-    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
-    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
-    "chain = node.chain_by_id(chain_id)\n",
-    "\n",
-    "try :\n",
-    "    doc_resp = chain.store_document_from_text(content = 'Plain text', name = 'elo_file.txt')\n",
-    "    print(doc_resp)\n",
-    "except :\n",
-    "    print(traceback.format_exc())\n",
-    "\n",
-    "\n",
-    "try :\n",
-    "    doc_bytes = chain.store_document_from_bytes(doc_bytes = b'Bytes message!', name = 'bytes_file.txt', content_type = 'text/plain')\n",
-    "    print(doc_bytes)\n",
-    "except :\n",
-    "    print(traceback.format_exc())\n",
-    "\n",
-    "try :\n",
-    "    doc_model = DocumentUploadModel(name = 'other_bytes_file.txt', contentType = 'text/plain')\n",
-    "    new_document = chain.store_document_from_bytes(doc_bytes = b'Other bytes message!', model = doc_model)\n",
-    "    print(new_document)\n",
-    "except :\n",
-    "    print(traceback.format_exc())\n",
-    "\n",
-    "\n",
-    "try :\n",
-    "    doc_file = chain.store_document_from_file(file_path = './test.txt', content_type = 'text/plain')\n",
-    "    print(doc_file)\n",
-    "except :\n",
-    "    print(traceback.format_exc())"
+    "# Download a compressed file with all files in the record\n",
+    "chain.download_documents_as_zip(locator)"
    ]
   },
   {
@@ -420,8 +309,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "node = RestNode(cert_file = 'demo.api.pfx', cert_pass = 'client_password', port = 32022, address='node.il2')\n",
-    "chain_id = 'EbAfcWGwCwzuiEtSwIwYQYIHy-g05CZl6jrcBAYuYRI'\n",
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "json_data = {\n",
@@ -442,6 +329,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Decrypting the JSON Document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pkcs12_cert = PKCS12Certificate(path = cert_file, password = cert_pass)\n",
+    "decrypted_json = resp.encryptedJson.decode_with(pkcs12_cert)\n",
+    "print(json.dumps(decrypted_json, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Storing Records\n",
+    "\n",
+    "There is also a generic interface to store records. It is possible to store records using the model classes or using the unpacked method.\n",
+    "\n",
+    "> To use this method, you will need to know the exact record's logic schema of the InterlockApp (`applicationId`) you want to store -- either JSON or bytewise.\n",
+    "\n",
+    "> If you are using InterlockApps 4 (Multi-Document) or 8 (JSON Documents), we highly recommend to use the specific methods for each app."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from il2_rest.models import NewRecordModelAsJson\n",
+    "from il2_rest.models import NewRecordModel\n",
+    "\n",
+    "chain = node.chain_by_id(chain_id)\n",
+    "\n",
+    "try :\n",
+    "    model_json = NewRecordModelAsJson(applicationId = 1, payloadTagId = 300, rec_json= {'tagId': 300,'version' : 1, 'apps': [4]})\n",
+    "    record_json = chain.add_record_as_json(model = model_json)\n",
+    "    print(record_json)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n",
+    "\n",
+    "try :\n",
+    "    model_bytes = NewRecordModel(applicationId = 1, payloadTagId = 300, payloadBytes = bytes([248, 52, 7, 5, 0, 0, 20, 2, 1, 4]))\n",
+    "    record_bytes = chain.add_record(model_bytes)\n",
+    "    print(record_bytes)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n",
+    "\n",
+    "try :\n",
+    "    record_unpacked = chain.add_record_unpacked(applicationId = 1, payloadTagId = 300, rec_bytes = bytes([5, 0, 0, 20, 2, 1, 4]))\n",
+    "    print(record_unpacked)\n",
+    "except :\n",
+    "    print(traceback.format_exc())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Interlockings\n",
     "\n",
     "It is also possible to check or force interlocks using the API."
@@ -455,25 +405,30 @@
    "source": [
     "from il2_rest.models import ForceInterlockModel\n",
     "\n",
-    "node = RestNode(cert_file = 'interlocker.pfx', cert_pass = 'password', port = 32020)\n",
-    "chain_id = 'A1wCG9hHhuVNb8hyOALHokYsWyTumHU0vRxtcK-iDKE'\n",
-    "chain = node.chain_by_id(chain_id)\n",
+    "chain = node.chains[0]\n",
     "\n",
-    "\n",
-    "for interlock in chain.interlocks :\n",
+    "for interlock in chain.interlocks().items :\n",
     "    print(interlock)\n",
-    "\n",
-    "force_model = ForceInterlockModel(targetChain = '8fox30W54ZkzM-shfUeU5C7ad-_fsf5nICwNpkCUk5w')\n",
+    "    break\n",
+    "    \n",
+    "force_model = ForceInterlockModel(targetChain = 'or7lzOGOvzH3GeNUTPqJI41CY0rVcEWgw6IEBmSSDxI')\n",
     "interlock_model = chain.force_interlock(model = force_model)\n",
     "print(interlock_model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "il2-env",
    "language": "python",
-   "name": "python3"
+   "name": "il2-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -485,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
