Add create chain with PKCS12 certificate in sample notebook.

--- a/sample/Using the il2_rest client.ipynb
+++ b/sample/Using the il2_rest client.ipynb
@@ -21,7 +21,6 @@
     "import sys\n",
     "import traceback\n",
     "import json\n",
-    "#sys.path.append('../')\n",
     "\n",
     "from il2_rest import RestNode\n",
     "from il2_rest.util import PKCS12Certificate\n",
@@ -50,13 +49,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "address = 'minerva-data.il2.io'\n",
+    "address = 'node.il2'\n",
     "port = 32094\n",
     "cert_file = 'danielchino.api.pfx'\n",
+    "\n",
+    "#password.details is a text file with the certificate password\n",
     "with open('password.details','r') as f :\n",
     "    cert_pass = f.readline()\n",
     "\n",
-    "node = RestNode(cert_file = cert_file, cert_pass = cert_pass, port = port, address=address)\n",
+    "node = RestNode(cert_file=cert_file, cert_pass=cert_pass, port=port, address=address, verify_ca=False)\n",
     "print(node.details)"
    ]
   },
@@ -119,7 +120,7 @@
    "source": [
     "## Creating a Chain\n",
     "\n",
-    "If your are using a certificate with administration privileges, it is possible to create new chains."
+    "If your are using a certificate with administration privileges, it is possible to create new chains. You can add a list of certificate to the chain's permissions by using the `apiCertificates` field with a list of `CertificatePermitModel`. "
    ]
   },
   {
@@ -128,13 +129,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from il2_rest.models import ChainCreationModel\n",
+    "from il2_rest.models import ChainCreationModel, CertificatePermitModel, AppPermissions\n",
+    "from il2_rest.enumerations import KeyPurpose\n",
+    "\n",
+    "# instantiating a PKCS12 certificate\n",
+    "pkcs12_cert = PKCS12Certificate(path=cert_file, password=cert_pass)\n",
+    "permissions = [AppPermissions(4), AppPermissions(5), AppPermissions(8)]\n",
+    "purposes = [KeyPurpose.Action, KeyPurpose.Protocol, KeyPurpose.ForceInterlock]\n",
+    "cert_permit = CertificatePermitModel(\n",
+    "    name='DanielChino API',\n",
+    "    permissions=permissions,\n",
+    "    purposes=purposes,\n",
+    "    pkcs12_certificate=pkcs12_cert\n",
+    ")\n",
     "\n",
     "new_chain = ChainCreationModel(\n",
-    "    name = 'IL2App Chain',\n",
-    "    description = 'Chain to store person enrollments',\n",
-    "    managementKeyPassword = 'management_password',\n",
-    "    emergencyClosingKeyPassword = 'closing_password'\n",
+    "    name='New Chain From Sample',\n",
+    "    description='Chain to store data created by the sample notebook',\n",
+    "    managementKeyPassword='management_password',\n",
+    "    emergencyClosingKeyPassword='closing_password',\n",
+    "    apiCertificates=[cert_permit]\n",
     ")\n",
     "\n",
     "created_chain = node.create_chain(model=new_chain)\n",
@@ -164,9 +178,14 @@
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
-    "    key_model = KeyPermitModel(app = 4, appActions = [1000, 1001], key_id = 'Key!MJ0kidltB324mfkiOG0aBlEocPA#SHA1',\n",
-    "                       name = 'documenter', publicKey = 'PubKey!KPgQEPgItqh4hu-oJtc7pSX0jp0fYEkV_kazPxOPGxiv1YX6dbt1QNb9AFb3mYpgUE9lRsehQz9Keh80K3mxdsURZbyhACRo3ljjKKBOQY4aKIIje9yPTTnJqg0XwwyBsx1zb-qEQaWm6S5HsVvMipGSfZIhgf3R2RYOvKR8zJRr7M1h7yoPN-02wzY1wubUpmpVB6aI_wAinTfUhBxKTuOkpe6M8OhPM-W4RUC-Et22Z4SzYK9-w08PULDBl3hCD2F-0K7TnQk8j-_1K0zV9bd2v0WovdjMrWUtMmWGcJ3Z2bJpB3-0e9Q_MxVw89r1nhYnj8zVf36HV8oVBZk4axWhFbTDrxADAQAB#RSA',\n",
-    "                       purposes = [KeyPurpose.Action, KeyPurpose.Protocol])\n",
+    "    key_model = KeyPermitModel(\n",
+    "        app=4,\n",
+    "        appActions=[1000, 1001],\n",
+    "        key_id='Key!MJ0kidltB324mfkiOG0aBlEocPA#SHA1',\n",
+    "        name='documenter',\n",
+    "        publicKey='PubKey!KPgQEPgItqh4hu-oJtc7pSX0jp0fYEkV_kazPxOPGxiv1YX6dbt1QNb9AFb3mYpgUE9lRsehQz9Keh80K3mxdsURZbyhACRo3ljjKKBOQY4aKIIje9yPTTnJqg0XwwyBsx1zb-qEQaWm6S5HsVvMipGSfZIhgf3R2RYOvKR8zJRr7M1h7yoPN-02wzY1wubUpmpVB6aI_wAinTfUhBxKTuOkpe6M8OhPM-W4RUC-Et22Z4SzYK9-w08PULDBl3hCD2F-0K7TnQk8j-_1K0zV9bd2v0WovdjMrWUtMmWGcJ3Z2bJpB3-0e9Q_MxVw89r1nhYnj8zVf36HV8oVBZk4axWhFbTDrxADAQAB#RSA',\n",
+    "        purposes=[KeyPurpose.Action, KeyPurpose.Protocol]\n",
+    "    )\n",
     "    keys = chain.permit_keys([key_model])\n",
     "    for key in keys:\n",
     "        print(key)\n",
@@ -224,16 +243,18 @@
     "\n",
     "# Using a DocumentsBeginTransactionModel\n",
     "try :\n",
-    "    model = DocumentsBeginTransactionModel(chain = chain_id, \n",
-    "                                           comment ='Using model',\n",
-    "                                           encryption = 'PBKDF2-SHA256-AES128-HIGH',\n",
-    "                                           password = 'qwerty123456')\n",
-    "    resp = chain.documents_begin_transaction(model = model)\n",
+    "    model = DocumentsBeginTransactionModel(\n",
+    "        chain=chain_id, \n",
+    "        comment='Using model',\n",
+    "        encryption='PBKDF2-SHA256-AES128-HIGH',\n",
+    "        password='qwerty123456'\n",
+    "    )\n",
+    "    resp = chain.documents_begin_transaction(model=model)\n",
     "    transaction_id = resp.transactionId\n",
     "   \n",
     "    print(chain.documents_transaction_add_item(transaction_id, \"item1.txt\", \"./test.txt\"))\n",
-    "    print(chain.documents_transaction_add_item(transaction_id, \"item2.txt\", \"./test2.txt\", comment = \"This file has a comment.\"))\n",
-    "    print(chain.documents_transaction_add_item(transaction_id, \"item3.pdf\", \"../InterlockLedgerAPI.pdf\", comment = \"PDF file.\"))\n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item2.txt\", \"./test2.txt\", comment=\"This file has a comment.\"))\n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item3.pdf\", \"../InterlockLedgerAPI.pdf\", comment=\"PDF file.\"))\n",
     "    \n",
     "       \n",
     "    print(chain.documents_transaction_status(transaction_id))\n",
@@ -245,11 +266,11 @@
     "\n",
     "# Passing parameters to the documents_begin_transaction method\n",
     "try :\n",
-    "    resp = chain.documents_begin_transaction(comment ='Using parameters')\n",
+    "    resp = chain.documents_begin_transaction(comment='Using parameters')\n",
     "    transaction_id = resp.transactionId\n",
     "   \n",
     "    print(chain.documents_transaction_add_item(transaction_id, \"item1.txt\", \"./test.txt\"))\n",
-    "    print(chain.documents_transaction_add_item(transaction_id, \"item2.txt\", \"./test2.txt\", comment = \"This file has a comment.\"))\n",
+    "    print(chain.documents_transaction_add_item(transaction_id, \"item2.txt\", \"./test2.txt\", comment=\"This file has a comment.\"))\n",
     "       \n",
     "    print(chain.documents_transaction_status(transaction_id))\n",
     "    \n",
@@ -312,12 +333,12 @@
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "json_data = {\n",
-    "    \"field1\" : 1,\n",
-    "    \"field2\" : \"Test\",\n",
+    "    \"field1\": 1,\n",
+    "    \"field2\": \"Test\",\n",
     "    \"field3\": [1,2,3],\n",
-    "    \"field4\" : {\n",
-    "        \"value1\" : 10,\n",
-    "        \"value2\" : 20\n",
+    "    \"field4\": {\n",
+    "        \"value1\": 10,\n",
+    "        \"value2\": 20\n",
     "    }\n",
     "}\n",
     "\n",
@@ -338,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pkcs12_cert = PKCS12Certificate(path = cert_file, password = cert_pass)\n",
+    "pkcs12_cert = PKCS12Certificate(path=cert_file, password=cert_pass)\n",
     "decrypted_json = resp.encryptedJson.decode_with(pkcs12_cert)\n",
     "print(json.dumps(decrypted_json, indent=4))"
    ]
@@ -368,21 +389,33 @@
     "chain = node.chain_by_id(chain_id)\n",
     "\n",
     "try :\n",
-    "    model_json = NewRecordModelAsJson(applicationId = 1, payloadTagId = 300, rec_json= {'tagId': 300,'version' : 1, 'apps': [4]})\n",
-    "    record_json = chain.add_record_as_json(model = model_json)\n",
+    "    model_json = NewRecordModelAsJson(\n",
+    "        applicationId=1,\n",
+    "        payloadTagId=300,\n",
+    "        rec_json={'tagId': 300,'version' : 1, 'apps': [4]}\n",
+    "    )\n",
+    "    record_json = chain.add_record_as_json(model=model_json)\n",
     "    print(record_json)\n",
     "except :\n",
     "    print(traceback.format_exc())\n",
     "\n",
     "try :\n",
-    "    model_bytes = NewRecordModel(applicationId = 1, payloadTagId = 300, payloadBytes = bytes([248, 52, 7, 5, 0, 0, 20, 2, 1, 4]))\n",
+    "    model_bytes = NewRecordModel(\n",
+    "        applicationId=1,\n",
+    "        payloadTagId=300,\n",
+    "        payloadBytes=bytes([248, 52, 7, 5, 0, 0, 20, 2, 1, 4])\n",
+    "    )\n",
     "    record_bytes = chain.add_record(model_bytes)\n",
     "    print(record_bytes)\n",
     "except :\n",
     "    print(traceback.format_exc())\n",
     "\n",
     "try :\n",
-    "    record_unpacked = chain.add_record_unpacked(applicationId = 1, payloadTagId = 300, rec_bytes = bytes([5, 0, 0, 20, 2, 1, 4]))\n",
+    "    record_unpacked = chain.add_record_unpacked(\n",
+    "        applicationId=1,\n",
+    "        payloadTagId=300,\n",
+    "        rec_bytes = bytes([5, 0, 0, 20, 2, 1, 4])\n",
+    "    )\n",
     "    print(record_unpacked)\n",
     "except :\n",
     "    print(traceback.format_exc())\n"
@@ -411,8 +444,9 @@
     "    print(interlock)\n",
     "    break\n",
     "    \n",
-    "force_model = ForceInterlockModel(targetChain = 'or7lzOGOvzH3GeNUTPqJI41CY0rVcEWgw6IEBmSSDxI')\n",
-    "interlock_model = chain.force_interlock(model = force_model)\n",
+    "#force_model = ForceInterlockModel(targetChain = 'or7lzOGOvzH3GeNUTPqJI41CY0rVcEWgw6IEBmSSDxI')\n",
+    "force_model = ForceInterlockModel(targetChain=chain.id)\n",
+    "interlock_model = chain.force_interlock(model=force_model)\n",
     "print(interlock_model)"
    ]
   },
