Fix code error in documentation of create chain examples.

--- a/sample/Using the il2_rest client.ipynb
+++ b/sample/Using the il2_rest client.ipynb
@@ -120,7 +120,9 @@
    "source": [
     "## Creating a Chain\n",
     "\n",
-    "If your are using a certificate with administration privileges, it is possible to create new chains. You can add a list of certificate to the chain's permissions by using the `apiCertificates` field with a list of `CertificatePermitModel`. "
+    "If your are using a certificate with administration privileges, it is possible to create new chains. You can add a list of certificate to the chain's permissions by using the `apiCertificates` field with a list of `CertificatePermitModel`.\n",
+    "\n",
+    "> When creating the chain, remember to add the same apps permitted in the `CertificatePermitModel` in the `additionalApps` field of the `ChainCreationModel`."
    ]
   },
   {
@@ -146,6 +148,7 @@
     "new_chain = ChainCreationModel(\n",
     "    name='New Chain From Sample',\n",
     "    description='Chain to store data created by the sample notebook',\n",
+    "    additionalApps=[4,8],\n",
     "    managementKeyPassword='management_password',\n",
     "    emergencyClosingKeyPassword='closing_password',\n",
     "    apiCertificates=[cert_permit]\n",
